Added instructions in README.md